usuniecie nieuzywanego stylowania